--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,15 @@
         "symfony/yaml": "^3.3"
     },
     "autoload": {
-        "psr-4": {"Docker\\": "src/"}
+        "psr-4": {"Docker\\": "src/Docker/"}
     },
     "authors": [
         {
             "name": "Luciano Andrade",
             "email": "andrade.luciano@gmail.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^6.2"
+    }
 }
